# LoCo

./: .gitmodules  ISSUES.md  README.md  Try2.hs  cabal.project  loco-syntax.md
locc/: README.md  locc.cabal  sample.loco
locc/src/Language/LoCo/: Compile.hs  CompileSamples.hs  Parser.hs  Region.hs  Samples.hs  Syntax.hs  Thunk.hs  Toposort.hs
locc/src/Language/LoCoEssential/: Driver.hs  Essence.hs  Expr.hs  ExprParse.hs  Parse.hs  Samples.hs  Thunk.hs
locc/src/Language/LoCoEssential/Interp/: Lazy.hs  Trad.hs
locc/src/Language/LoCoEssential/ParsingExpr/: Expr.hs  Parse.hs
locc/src/Language/LoCoEssential/SimpleExpr/: Expr.hs  Parse.hs
locc/src/Language/LoCoV2/: Parser.hs  Primitives.hs  Stack.hs
locc/src/Language/LoCoV2/Syntax/: Simple.hs
locc/src/Language/Optimal/: Collection.hs  Compile.hs  Parse.hs  Quote.hs  Samples.hs  Samples2.hs  Syntax.hs  Typecheck.hs  Util.hs
locc/src/Language/Optimal/Compile/: Collections.hs  FreeVars.hs  Rename.hs
locc/src/Language/Optimal/Compile/Haskell/: CollectBindings.hs  Free.hs  Rename.hs  RenameFree.hs  TH.hs
locc/src/Language/Optimal/Samples/: Daedalus.hs  ICC.hs  Nested.hs  Parameterized.hs  Vector.hs
locc/src/Thunk/: IORef.hs  IORefVal.hs  RefVal.hs  Vector.hs
locc/test/: Main.hs  Util.hs
locc/test/Test/Language/LoCoEssential/: Essence.hs
locc/test/Test/Language/Optimal/: Compile.hs  Parse.hs  Typecheck.hs
locc/test/Test/Language/Optimal/Compile/: FreeVars.hs
locc/test/Test/Language/Optimal/Compile/Haskell/: Free.hs  Rename.hs
locc/test/Test/Thunk/: Vector.hs
optimal/: README.md  optimal.cabal
optimal-ddl/: README.md  optimal-ddl.cabal
optimal-ddl/src/Language/Optimal/Samples/: Daedalus.hs  ICC.hs
optimal-ddl/src/Language/Optimal/Samples/Daedalus/: Util.hs
optimal-pear/: README.md  optimal-pear.cabal
optimal-pear/src/Language/Optimal/Samples/: ICC.hs
optimal-pear/src/Language/PEAR/Region/: Absolute.hs
optimal/doc/: reference.md
optimal/src/Language/Optimal/: Compile.hs  Parse.hs  Quote.hs  Samples.hs  Samples2.hs  Syntax.hs  Typecheck.hs  Util.hs
optimal/src/Language/Optimal/Compile/: CollectBindings.hs  Free.hs  Haskell.hs  Rename.hs  RenameFree.hs
optimal/src/Language/Optimal/Compile/Haskell/: CollectBindings.hs
optimal/src/Language/Optimal/Samples/: Doc.hs  ICC.hs  Nested.hs  Parameterized.hs  ToyICC.hs  Tuple.hs  Vector.hs
optimal/src/Thunk/: IORef.hs  RefVal.hs  Vector.hs
optimal/test/: Main.hs
optimal/test/Test/Language/Optimal/: Compile.hs  Parse.hs  Typecheck.hs
optimal/test/Test/Language/Optimal/Compile/: Free.hs  Rename.hs
optimal/test/Test/Thunk/: Vector.hs
pear/: CHANGELOG.md  pear.cabal
pear/src/Language/LR/: API.hs  ExampleICC.hs
pear/src/Language/LR/Examples/: ICC_Optimal.hs  ICC_Spec.hs  ICC_Tests.hs
pear/src/Language/OptimalPEAR/: RunOptimal.hs
pear/src/Language/OptimalPEAR/Examples/: ICC_Demo.hs  ICC_Inputs.hs  ICC_Optimal.hs  ICC_Spec.hs  ICC_Tests.hs  ICC_V1.hs  Trivial.hs
pear/src/Language/PEAR/: API.hs  ParserLibrary.hs  Primitives.hs  Types.hs  Util.hs
pear/src/Language/PEAR/Region/: API.hs  Implem.hs  Test.hs
pear/test/: Main.hs
