cabal-version:      2.4
name:               locc
version:            0.1.0.0
author:             Sam Cowger
maintainer:         sam@galois.com

common common
    ghc-options:
        -Wall
        -Wextra
        -Wno-unrecognised-pragmas

    default-extensions:
        ImportQualifiedPost
        LambdaCase
        RecordWildCards
        TypeApplications

    default-language: Haskell2010

library
    import: common

    exposed-modules:
        Language.Optimal.Collection
        Language.Optimal.Compile
        Language.Optimal.Compile.Haskell.CollectBindings
        Language.Optimal.Compile.Haskell.Free
        Language.Optimal.Compile.Haskell.TH
        Language.Optimal.Compile.Haskell.Rename
        Language.Optimal.Compile.Haskell.RenameFree
        Language.Optimal.Parse
        Language.Optimal.Quote
        Language.Optimal.Samples
        Language.Optimal.Samples.Nested
        Language.Optimal.Samples.Parameterized
        Language.Optimal.Samples.Vector
        Language.Optimal.Samples2
        Language.Optimal.Syntax
        Language.Optimal.Typecheck
        Language.Optimal.Util

        Language.LoCoEssential.Driver
        Language.LoCoEssential.Essence
        Language.LoCoEssential.Interp.Lazy
        Language.LoCoEssential.Interp.Trad
        Language.LoCoEssential.SimpleExpr.Expr
        Language.LoCoEssential.SimpleExpr.Parse
        Language.LoCoEssential.ParsingExpr.Expr
        Language.LoCoEssential.ParsingExpr.Parse
        Language.LoCoEssential.Parse
        Language.LoCoEssential.Samples
        Language.LoCoEssential.Thunk

        Language.LoCo.Toposort

        Thunk.IORef
        Thunk.IORefVal
        Thunk.RefVal
        Thunk.Vector
        
    build-depends:
        base ^>=4.16.4.0,
        containers ^>=0.6.4.1,
        fgl ^>=5.7.0.3,
        hashable ^>=1.4.2.0,
        haskell-src-meta ^>=0.8.12,
        megaparsec ^>=9.3.0,
        mtl ^>=2.2.2,
        template-haskell ^>=2.18.0.0,
        text ^>=1.2.5.0,
        STMonadTrans ^>=0.4.6,
        unordered-containers ^>=0.2.19.1,
        vector ^>=0.13.0.0,
        transformers

    hs-source-dirs: src

test-suite locc-test
    import: common

    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs

    other-modules:
        Test.Language.LoCoEssential.Essence
        Test.Language.Optimal.Compile
        Test.Language.Optimal.Compile.Haskell.Free
        Test.Language.Optimal.Compile.Haskell.Rename
        Test.Language.Optimal.Parse
        Test.Language.Optimal.Typecheck
        Util
    
    build-depends:
        base ^>=4.16.4.0,
        locc,
        containers ^>=0.6.4.1,
        haskell-src-meta ^>=0.8.12,
        QuickCheck ^>=2.14.2,
        tasty ^>=1.4.3,
        tasty-hunit ^>=0.10.0.3,
        tasty-quickcheck ^>=0.10.2,
        template-haskell ^>=2.18.0.0,
        text ^>=1.2.5.0
