cabal-version:      2.4
name:               optimal-ddl
version:            0.1.0.0
author:             Sam Cowger
maintainer:         sam@galois.com

common common
    ghc-options:
        -Wall
        -Wextra
        -Wno-unrecognised-pragmas

    default-extensions:
        ImportQualifiedPost
        LambdaCase
        QuasiQuotes
        RecordWildCards
        TypeApplications

    default-language: Haskell2010

library
    import: common

    exposed-modules:
        Language.Optimal.Samples.ICC
        Language.Optimal.Samples.Daedalus.Util
        
    build-depends:
        base ^>=4.16.4.0,
        
        daedalus,
        icc-tools,
        optimal,
        rts-hs,
        rts-hs-data,

        bytestring ^>=0.11.4.0,

    hs-source-dirs: src
