cabal-version:      2.4
name:               optimal-pear
version:            0.1.0.0
license-file:       LICENSE
author:             Sam Cowger
maintainer:         sam@galois.com

common common
    ghc-options:
        -Wall
        -Wextra
        -Wno-unrecognised-pragmas

    default-extensions:
        ImportQualifiedPost
        LambdaCase
        OverloadedStrings
        QuasiQuotes
        RecordWildCards
        TypeApplications

    default-language: Haskell2010

library
    import: common

    exposed-modules:
        Language.Optimal.Samples.ICC
        Language.PEAR.Region.Absolute
        
    build-depends:
        base ^>=4.16.4.0,
        
        optimal,
        pear,

    hs-source-dirs: src
