cabal-version:      2.4
name:               pear
version:            0.0.1.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Mark Tullsen
maintainer:         tullsen@galois.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common
    ghc-options:
        -Wall
        -Wextra
        -Wno-unrecognised-pragmas
        -Wno-missing-signatures
          -- FIXME: add back
          
    default-extensions:
        ImportQualifiedPost
        LambdaCase
        RecordWildCards
        TypeApplications

    default-language: GHC2021
    -- really want? if so, probably some LANGUAGE pragmas to remove.
    
library
    import: common
    
    hs-source-dirs: src
    
    exposed-modules:
        Language.PEAR.Region.API
        Language.PEAR.Region.Implem
        Language.PEAR.Region.Test
        Language.PEAR.Primitives
        Language.PEAR.ParserLibrary
        Language.PEAR.Types
        Language.PEAR.Util
        
        Language.OptimalPEAR.Examples.ICC_V1
        Language.OptimalPEAR.Examples.ICC_Optimal
        Language.OptimalPEAR.Examples.Trivial
  
    build-depends:
        base ^>=4.16.4.0,
        containers ^>=0.6.4.1,
        locc,
        QuickCheck,
        generic-arbitrary,
        transformers
        
test-suite pear-test
    import: common

    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs

    build-depends:
        base ^>=4.16.4.0
                
