cabal-version:      2.4
name:               pear
version:            0.0.1.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Mark Tullsen
maintainer:         tullsen@galois.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common common
    ghc-options:
        -Wall
        -Wextra
        -Wno-unrecognised-pragmas
        -Wno-missing-signatures
          -- FIXME: add back

    default-extensions:
        ImportQualifiedPost
        LambdaCase
        RecordWildCards
        TypeApplications

    default-language: GHC2021
    -- really want? if so, probably some LANGUAGE pragmas to remove.

library
    import: common

    hs-source-dirs: src

    exposed-modules:
        Language.PEAR.API
        Language.PEAR.Region.API
        Language.PEAR.Region.Implem
        Language.PEAR.Region.Test
        Language.PEAR.Types
        Language.PEAR.Util

        Language.OptimalPEAR.Examples.ICC_Inputs
        Language.OptimalPEAR.RunOptimal
        
        -- Language.LR.Implem
        Language.LR.Examples.ICC_Spec
        Language.LR.Examples.ICC_Tests
        Language.LR.Examples.ICC_Optimal

    build-depends:
        base ^>=4.16.4.0,
        containers ^>=0.6.4.1,
        optimal,
        QuickCheck,
        generic-arbitrary,
        transformers,
        vector

test-suite pear-test
    import: common

    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs

    build-depends:
        base ^>=4.16.4.0
